[package]
name = "kak"
version = "0.1.1"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-std = { version="1.9.0", features=["unstable"] }
byteorder = "1.4.3"
yew-ansi = { git = "https://github.com/eburghar/yew-ansi.git", default-features = false }
